<resources>
    <string name="app_name">My Application</string>

    <string name="CPU_Cooler">CPU Cooler</string>
    <string name="Scanning">Scanning File...</string>
    <string name="Optimizing">Optimizing...</string>
    <string name="Stop_Scanning">Stop Scanning</string>
    <string name="RUS">Are you sure to stop scanning your device?</string>
    <string name="Cancel">Cancel</string>
    <string name="Stop">Stop Scan</string>
    <string name="Progress_Complete">Progress Complete</string>
    <string name="Countinue">Your device temperature has cooled down. Continue to explore other.</string>
    <string name="Clean_up">Clean up</string>
    <string name="Deep_Clean">Deep Clean</string>
    <string name="Cool_Down">Cool Down</string>
    <string name="Battery_Saver">Battery Saver</string>
    <string name="Battery_Informations">Battery Informations</string>
    <string name="Temperature">Temperature:</string>
    <string name="Widget_Tutorial">Widget Tutorial</string>
    <string name="Step_1">Step 1:</string>
    <string name="Step_2">Step 2:</string>
    <string name="Step_3">Step 3:</string>
    <string name="Step_4">Step 4:</string>
    <string name="Step_1_detail">On the home screen, tap and hold on any available space.</string>
    <string name="Step_2_detail">Choose “Widgets”</string>
    <string name="Step_3_detail">Tap and hold the widget you would like to add</string>
    <string name="Step_4_detail">Drag and drop the widget onto the available space. </string>
    <string name="Add_widget_setting">Add your widget to home screen by one tap</string>
    <string name="Widgets_4x2">4x2 Widgets</string>
    <string name="Widgets_4x1">4x1 Widgets</string>
    <string name="add_widget">Add Widget</string>
    <string name="how_to_add_widget">How to add widget? Click here to the tutorial.</string>
    <string name="Languages">Languages</string>
    <string name="Settings">Settings</string>
    <string name="Upgrade_Premium">Upgrade Premium</string>
    <string name="Subscribe_to_enjoy">Subscribe to enjoy more Premium features</string>
    <string name="Get_Now">GET NOW</string>
    <string name="About_this_App">About this App</string>
    <string name="Notification">Notification</string>
    <string name="Temperature_Units">Temperature Units</string>
    <string name="Generals">Generals</string>
    <string name="About_us">About us</string>
    <string name="rate">Rate 5 stars</string>
    <string name="Widgets">Widgets</string>
    <string name="shared">Shared With Friends</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Voltage">Voltage:</string>
    <string name="Capacity">Capacity:</string>
    <string name="Speed_Up">Speed Up</string>
    <string name="Phone_Booster">Phone Booster</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="configure">Configure</string>
    <string name="Clean">CLEAN</string>
    <string name="Quick_Clean">Quick Clean</string>
    <string name="Premium">PREMIUM</string>
    <string name="Power_Saver">Power Saver</string>
</resources>