<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imv_back"
            android:paddingHorizontal="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="34dp"
            android:src="@drawable/back_arrow_black" />

        <TextView
            android:layout_gravity="center"
            style="@style/tv_rubik_18_600_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Widget_Tutorial"
            />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/tv_rubik_18_600_blue_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Step_1" />

            <TextView
                style="@style/tv_rubik_14_400_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="34dp"
                android:gravity="center"
                android:lineHeight="22dp"
                android:text="@string/Step_1_detail" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="51dp"
                android:src="@drawable/widget_tutorial_step_1" />

            <TextView
                style="@style/tv_rubik_18_600_blue_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Step_2" />

            <TextView
                style="@style/tv_rubik_14_400_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="34dp"
                android:gravity="center"
                android:lineHeight="22dp"
                android:text="@string/Step_2_detail" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="51dp"
                android:src="@drawable/widget_tutorial_step_2" />

            <TextView
                style="@style/tv_rubik_18_600_blue_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Step_3" />

            <TextView
                style="@style/tv_rubik_14_400_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="34dp"
                android:gravity="center"
                android:lineHeight="22dp"
                android:text="@string/Step_3_detail" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="51dp"
                android:src="@drawable/widget_tutorial_step_3" />

            <TextView
                style="@style/tv_rubik_18_600_blue_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Step_4" />

            <TextView
                style="@style/tv_rubik_14_400_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="34dp"
                android:gravity="center"
                android:lineHeight="22dp"
                android:text="@string/Step_4_detail" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="51dp"
                android:src="@drawable/widget_tutorial_step_4" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>