<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:paddingVertical="20dp"
        android:src="@drawable/back_arrow_white" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/finish" />

    <TextView
        style="@style/tv_rubik_16_600_green_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Progress_Complete" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView"
        style="@style/tv_rubik_12_400_green_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineHeight="19.2dp"
        android:paddingHorizontal="65dp"
        android:text="@string/Countinue" />

    <LinearLayout
        android:layout_marginTop="34dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:background="@drawable/bg_blue_6_rd_12"
        android:orientation="horizontal"
 >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginLeft="14.16dp"
            android:src="@drawable/deep_clean" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="55dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tv_rubik_14_600_green_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Deep_Clean" />

            <TextView
                android:id="@+id/tv_junk_size"
                style="@style/tv_rubik_12_400_white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:text="314,4 Junk Files" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_deep_clean"
            style="@style/tv_rubik_12_500_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_blue_04_rd_20"
            android:paddingHorizontal="22dp"
            android:paddingVertical="9dp"
            android:text="@string/Clean_up" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="16.52dp"
        android:background="@drawable/bg_blue_6_rd_12"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginLeft="14.16dp"
            android:background="@null"
            android:src="@drawable/cpu_cooler" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="55dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tv_rubik_14_600_green_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/CPU_Cooler" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_temp"
                    style="@style/tv_rubik_12_400_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="37,8 C" />

                <TextView
                    android:id="@+id/tv_battery_health"
                    style="@style/tv_rubik_12_400_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - Good" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_cool_down"
            style="@style/tv_rubik_12_500_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_blue_04_rd_20"
            android:paddingHorizontal="17dp"
            android:paddingVertical="9dp"
            android:text="@string/Cool_Down" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="21dp"
        android:layout_marginTop="16.52dp"
        android:background="@drawable/bg_blue_6_rd_12"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="12dp"
            android:layout_marginLeft="14.16dp"
            android:src="@drawable/battery_saver" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="55dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/tv_rubik_14_600_green_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Battery_Saver" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_battery_percent"
                    style="@style/tv_rubik_12_400_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80%" />

                <TextView
                    android:id="@+id/tv_battery"
                    style="@style/tv_rubik_12_400_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" - Good" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            style="@style/tv_rubik_12_500_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="19dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/bg_blue_04_rd_20"
            android:paddingHorizontal="22dp"
            android:paddingVertical="9dp"
            android:text="Clean up" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="34dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/grey"
      />


</LinearLayout>